Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97771

Interaction with Apple Pencil causes crash when app window is shown in Sidecar

    XMLWordPrintable

Details

    • macOS
    • 82eacced37 (qt/tqtc-qtdeclarative/5.15) ebbd9a89ef (qt/tqtc-qtbase/5.15)

    Description

      When using an iPad device as Sidecar on Mac OS, interacting with an Apple Pencil on the app causes it to crash.

      I've attached a really small example that replicates the problem. This example only contains a button in the center of the window.

      After enabling sidecar, drag the Qt app window to the sidecar and use Apple Pencil to press the button and the app will crash.

      The full stack trace is attached.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            sinosoidal Nuno Santos
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes