macOS: assume an unidentified tablet device is a stylus

When an iPad is used as a sidecar, the Apple Pencil has uniqueID 0
and vendorPointingDeviceType 0; but TabletDevice::NoDevice is not
handled well, and in fact the Pencil is a Stylus. In general, an
unidentified tablet device should be treated as a stylus, because
other types are uncommon anyway.

Fixes: QTBUG-97771
Change-Id: Ib114167d89b28f7ffb1ce920319ad06030efd48f
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>